Restrucre application  to accomodate other two service as well as user and Auth'

--- a/src/AuthServiceApi/appsettings.json
+++ b/src/AuthServiceApi/appsettings.json
@@ -1,9 +1,16 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ERP_AuthService;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": { "Key": "super_secret_key_123" },
   "AllowedHosts": "*"
 }
