--- a/src/RequisitionApi/appsettings.json
+++ b/src/RequisitionApi/appsettings.json
@@ -1,8 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "ERPServiceConnection": "Server=localhost;Database=ERP_RequesitionDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-   },
+    "DefaultConnection": "Server=localhost;Database=ERP_RequesitionDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
 
   "Logging": {
     "LogLevel": {
