--- a/src/UserApi/appsettings.json
+++ b/src/UserApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ERP_UserService;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
